fixed height on smaller screens

--- a/web-app/src/app/app.component.css
+++ b/web-app/src/app/app.component.css
@@ -9,7 +9,7 @@
 
 /* Tabs */
 .tabs {
-  margin: 0.5% 5px;
+  margin: 0.5% 6px;
   display: inline-block;
   width: 65%;
 }
