--- a/web-app/src/app/leftpanel/leftpanel.component.css
+++ b/web-app/src/app/leftpanel/leftpanel.component.css
@@ -39,6 +39,10 @@
   and (min-height: 600px)
   and (max-height: 800px) {
 
+    :host {
+      height: 96%;
+    }
+
     .packet {
       padding: 12px;
     }
