--- a/web-app/src/app/rightpanel/rightpanel.component.css
+++ b/web-app/src/app/rightpanel/rightpanel.component.css
@@ -8,7 +8,7 @@
 
 .car-misc,
 .battery-misc {
-  width: 42%;
+  width: 40%;
   display: flex;
   justify-content: space-between;
   flex-direction: column;
@@ -136,6 +136,10 @@ mat-divider {
   screen
   and (min-height: 600px)
   and (max-height: 800px) {
+
+  :host {
+    height: 96%;
+  }
 
   .car-misc,
   .battery-misc {
